<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:theme="@style/LoginTheme"
                                             android:background="@drawable/banner"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:id="@+id/titleLayout"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/login_title_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/logisticsWord"
                android:text="@string/login_logistics"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_title_size"
                android:layout_marginStart="@dimen/login_text_view_def_margin_padding"
                android:layout_marginLeft="@dimen/login_text_view_def_margin_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
            style="@style/LoginDefaultTextView"
            android:id="@+id/loginSubtitleTitle"
            android:text="@string/login_title"
            android:textAllCaps="true"
            android:textSize="@dimen/login_text_subhead_size"
            android:layout_marginTop="@dimen/login_subtitle_margin_top_big"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    <FrameLayout
            android:id="@+id/emailLayout"
            android:layout_marginTop="@dimen/login_email_margin_top_big"
            app:layout_constraintTop_toBottomOf="@id/loginSubtitleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginEmailEditText"
                    android:nextFocusDown="@id/loginPasswordEditText"
                    android:hint="@string/login_hint_email"
                    style="@style/LoginEditText"
                    android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
                android:id="@+id/loginEmailClearBtn"
                app:srcCompat="@drawable/login_email_clear_btn"
                style="@style/LoginClearButton" />

    </FrameLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/loginPasswordEditText"
                android:imeOptions="actionDone"
                style="@style/LoginEditText"
                android:inputType="textPassword"
                android:hint="@string/login_hint_password"/>
    </android.support.design.widget.TextInputLayout>
    <FrameLayout
            android:id="@+id/signInButtonLayout"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
                android:id="@+id/loginSignInButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"
                android:text="@string/login_sign_in_button" />
    </FrameLayout>
    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/LoginProgressBar"
            app:layout_constraintTop_toTopOf="@id/signInButtonLayout"
            app:layout_constraintBottom_toBottomOf="@id/signInButtonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
    />
    <TextView
            style="@style/LoginDefaultTextView"
            android:id="@+id/loginForgotPasswordTitle"
            app:layout_constraintTop_toBottomOf="@id/signInButtonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_hint_forgot_password"
            android:layout_marginTop="@dimen/activity_vertical_margin" />
    <TextView
            style="@style/LoginDefaultTextView"
            android:id="@+id/loginForgotPasswordButton"
            app:layout_constraintTop_toBottomOf="@id/loginForgotPasswordTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_forgot_password_text"
            android:textSize="@dimen/login_text_subhead_size"/>
    <Button
            android:id="@+id/loginRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:text="@string/login_register_text"
            android:textColor="@color/colorWhite" />
</android.support.constraint.ConstraintLayout>